export const snapshot = {};

snapshot[`compilers/esbuild > Successful JSX build 1`] = `
'// lib/component.jsx
import { jsx } from "react/jsx-runtime";
var Component = () => {
  return /* @__PURE__ */ jsx("div", {
    children: "Hello"
  });
};
var component_default = Component;
export {
  component_default as default
};
'
`;

snapshot[`compilers/esbuild > Import bare module 1`] = `
'// lib/import_node_module.js
import myPackage from "/node_modules/mypackage/index.js";
import isIp from "/node_modules/.pnpm/is-ip@5.0.0/node_modules/is-ip/index.js";
var import_node_module_default = () => {
  myPackage();
  isIp("?");
};
export {
  import_node_module_default as default
};
'
`;

snapshot[`compilers/esbuild > allows unknown bare module 1`] = `
'// lib/import_unknown_node_module.js
import unknown from "unknown";
var import_unknown_node_module_default = () => {
  unknown();
};
export {
  import_unknown_node_module_default as default
};
'
`;

snapshot[`compilers/esbuild > Import relative module 1`] = `
'// lib/import_relative_module.js
import "/lib/foo.js";
'
`;

snapshot[`compilers/esbuild > Import absolute module 1`] = `
'// lib/import_absolute_module.js
import "/lib/foo.js";
'
`;

snapshot[`compilers/esbuild > Import remote module 1`] = `
'// lib/import_remote_module.js
import emailRegex from "https://esm.sh/email-regex";
'
`;

snapshot[`compilers/esbuild > import map > from json 1`] = `
'// lib/import_map.js
import axios from "https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js";
import { createElement } from "https://esm.sh/react@18.2.0";
import foo from "/lib/foo.js";
axios();
foo();
createElement();
import("https://esm.sh/solid@0.2.1");
'
`;

snapshot[`compilers/esbuild > import map > maps imports via trailing slash 1`] = `
'// env:env
var RAILS_ENV = "test";

// ../../lib/proscenium/runtime/component_manager/render_component.jsx
import { jsx } from "https://esm.sh/react@18.2.0/jsx-runtime";
async function render_component_default(ele, data) {
  const { createElement, useEffect, lazy, Suspense } = await import("https://esm.sh/react@18.2.0");
  const { createRoot } = await import("https://esm.sh/react-dom@18.2.0/client");
  const component = lazy(() => import(\`/app/components\${data.path}.jsx\`));
  const contentLoader = data.contentLoader && ele.firstElementChild;
  const Fallback = ({ contentLoader: contentLoader2 }) => {
    useEffect(() => {
      contentLoader2 && contentLoader2.remove();
    }, []);
    if (!contentLoader2)
      return null;
    return /* @__PURE__ */ jsx("div", {
      style: { height: "100%" },
      dangerouslySetInnerHTML: { __html: contentLoader2.outerHTML }
    });
  };
  createRoot(ele).render(
    /* @__PURE__ */ jsx(Suspense, {
      fallback: /* @__PURE__ */ jsx(Fallback, {
        contentLoader
      }),
      children: createElement(component, data.props)
    })
  );
  RAILS_ENV === "development" && console.debug(\`[REACT]\`, \`Rendered \${data.path.slice(1)}\`);
}
export {
  render_component_default as default
};
'
`;

snapshot[`compilers/esbuild > import map > resolves imports from a node_module 1`] = `
'// node_modules/.pnpm/is-ip@5.0.0/node_modules/is-ip/index.js
import ipRegex from "https://esm.sh/ip-regex";
import { isMatch } from "super-regex";
var maxIPv4Length = 15;
var maxIPv6Length = 45;
var options = {
  timeout: 400
};
function isIP(string) {
  return isMatch(ipRegex({ exact: true }), string.slice(0, maxIPv6Length), options);
}
function isIPv6(string) {
  return isMatch(ipRegex.v6({ exact: true }), string.slice(0, maxIPv6Length), options);
}
function isIPv4(string) {
  return isMatch(ipRegex.v4({ exact: true }), string.slice(0, maxIPv4Length), options);
}
function ipVersion(string) {
  return isIP(string) ? isIPv6(string) ? 6 : 4 : void 0;
}
export {
  ipVersion,
  isIP,
  isIPv4,
  isIPv6
};
'
`;

snapshot[`compilers/esbuild > Import relative module without extension 1`] = `
'// lib/import_relative_module_without_extension.js
import foo from "/lib/foo.js";
'
`;

snapshot[`compilers/esbuild > Import absolute module without extension 1`] = `
'// lib/import_absolute_module_without_extension.js
import foo from "/lib/foo.js";
'
`;

snapshot[`compilers/esbuild > Import css module from JS 1`] = `
'// lib/styles.module.css
var e = document.querySelector("#_330940eb");
if (!e) {
  e = document.createElement("style");
  e.id = "_330940eb";
  document.head.appendChild(e);
  e.appendChild(document.createTextNode(\`.myClass330940eb{color:pink}\`));
}
var styles_module_default = { "myClass": "myClass330940eb" };

// lib/import_css_module.js
console.log(styles_module_default);
'
`;

snapshot[`compilers/esbuild > Import css from JS 1`] = `
'// app/views/layouts/application.css
var e = document.querySelector("#_6d24c769");
if (!e) {
  e = document.createElement("style");
  e.id = "_6d24c769";
  document.head.appendChild(e);
  e.appendChild(document.createTextNode(\`body{color:pink}.name{color:#000}
\`));
}
'
`;

snapshot[`compilers/esbuild > Import css from jsx 1`] = `
'// app/views/layouts/application.css
var e = document.querySelector("#_6d24c769");
if (!e) {
  e = document.createElement("style");
  e.id = "_6d24c769";
  document.head.appendChild(e);
  e.appendChild(document.createTextNode(\`body{color:pink}.name{color:#000}
\`));
}
'
`;

snapshot[`compilers/esbuild > bundled js import 1`] = `
'// lib/foo.js?bundle
console.log("/lib/foo.js");

// lib/foo2.js?bundle
console.log("/lib/foo2.js");

// lib/foo3.js?bundle
console.log("/lib/foo3.js");

// node_modules/mypackage/index.js?bundle
console.log("node_modules/mypackage");

// ../../lib/proscenium/runtime/component_manager/index.js?bundle
async function init() {
  const elements = document.querySelectorAll("[data-component]");
  if (elements.length < 1)
    return;
  const { default: renderComponent } = await import("/proscenium-runtime/component_manager/render_component.jsx");
  Array.from(elements, (ele) => {
    const data = JSON.parse(ele.getAttribute("data-component"));
    let isVisible = false;
    const observer = new IntersectionObserver((entries) => {
      entries.forEach((entry) => {
        if (!isVisible && entry.isIntersecting) {
          isVisible = true;
          observer.unobserve(ele);
          renderComponent(ele, data);
        }
      });
    });
    observer.observe(ele);
  });
}

// lib/import_proscenium_component_manager.js?bundle
init();

// lib/component.jsx?bundle
import { jsx } from "react/jsx-runtime";
var Component = () => {
  return /* @__PURE__ */ jsx("div", {
    children: "Hello"
  });
};
var component_default = Component;

// lib/bundle_import.js
import emailRegex from "https://esm.sh/email-regex";
import emailRegex2 from "https://esm.sh/email-regex?bundle";
component_default();
emailRegex();
emailRegex2();
'
`;

snapshot[`compilers/esbuild > bundled css import 1`] = `
'@import "https://esm.sh/@radix-ui/colors@0.1.8/blue.css?bundle";
@import "https://esm.sh/@radix-ui/colors@0.1.8/gray.css";

/* lib/foo.css?bundle */
body {
  color: red;
}
body h1 {
  color: #00f;
}

/* node_modules/mypackage/styles.css?bundle */
.mypackage {
  color: red;
}

/* lib/styles.module.css?bundle */
.myClass330940eb {
  color: pink;
}

/* lib/bundle_import.css */
header {
  color: pink;
}
'
`;
